--- a/PasswordManagerMainWindow/Auth/PasswordReset.xaml
+++ b/PasswordManagerMainWindow/Auth/PasswordReset.xaml
@@ -4,11 +4,60 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:PasswordManager.Auth"
+      xmlns:res="clr-namespace:PasswordManager.Properties"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="PasswordReset">
+      Background="{DynamicResource MainColor}"
+      Foreground="{DynamicResource TextColor}"
+      ShowsNavigationUI="False"
+      d:DesignHeight="520" d:DesignWidth="500"
+      >
 
     <Grid>
-        
+        <Grid.RowDefinitions>
+        <RowDefinition Height="40"/>
+        <RowDefinition Height="40"/>
+        <RowDefinition Height="30"/>
+        <RowDefinition Height="20"/>
+        <RowDefinition Height="30"/>
+        <RowDefinition Height="50"/>
+        <RowDefinition Height="20"/>
+        <RowDefinition Height="50"/>
+        <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="85"/>
+            <ColumnDefinition Width="330"/>
+            <ColumnDefinition Width="85"/>
+        </Grid.ColumnDefinitions>
+        <TextBlock Text="{x:Static res:Resources.PasswordResetTitle}" Grid.Column="1" Grid.Row="2" 
+                   HorizontalAlignment="Left" 
+                   VerticalAlignment="Center" 
+                   FontSize="28" 
+                  
+                   FontFamily="Global Sans Serif" 
+                   FontWeight="Bold"
+                   />
+        <TextBlock Text="{x:Static res:Resources.PasswordResetHint}" Grid.Column="1" Grid.Row="3" 
+                   HorizontalAlignment="Left" 
+                   VerticalAlignment="Center" 
+                   FontSize="14" 
+                  
+                   FontFamily="Global Sans Serif" 
+                   FontWeight="Bold"
+                   />
+        <TextBox x:Name="SixDigitsTextBox" Grid.Row="5" 
+                 Grid.Column="1" 
+                 BorderThickness="2" 
+                 Height="40"
+                 Style="{StaticResource EmailTextBoxStyle}"/>
+
+        <Button x:Name="Submit" Grid.Column="1"
+            Grid.Row="7"
+            Content="{x:Static res:Resources.PasswordResetConfirm}"
+                HorizontalAlignment="Center"
+                Width="160"
+                Height="50" 
+                Style="{StaticResource SubmitButtonStyle}" 
+                />
     </Grid>
 </Page>
